fixed readability of header for mobile and desktop views

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,15 +319,16 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  color: #fff;  
 }
 
 #hero h2 {
   color: #eee;
-  margin-bottom: 10px;
+  margin-bottom: 200px;
   font-size: 24px;
   font-weight: 300;
   font-family: "Poppins", sans-serif;
+
 }
 
 #hero .btn-get-started {
@@ -346,6 +347,8 @@ h1, h2, h3, h4, h5, h6 {
   #hero {
     background-attachment: fixed;
   }
+
+
 }
 
 @media (max-width: 768px) {
@@ -356,8 +359,9 @@ h1, h2, h3, h4, h5, h6 {
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
-    margin-bottom: 30px;
+    margin-bottom: 200px;
   }
+
 }
 
 /*--------------------------------------------------------------
@@ -450,6 +454,7 @@ section {
 --------------------------------------------------------------*/
 .about .content {
   padding: 30px 0;
+  margin: 30px;
 }
 
 .about .content h3 {
